--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -1,22 +1,23 @@
 <div id="<%= dom_id restaurant %>">
   <p>
-    <strong>Owner:</strong>
+    <strong>Owner:</strong><br>
     <% if restaurant.owner_image.attached? %>
-      <%= link_to image_tag(restaurant.owner_image.variant({ resize_to_limit: [1_000, 1_000], face_crop: { padding: 0.3 }})), restaurant.owner_image %>
+      <%= link_to image_tag(restaurant.owner_image.variant({ face_crop: { padding: 0.3 }, resize_to_limit: [100, 100]})), restaurant.owner_image %>
     <% end %>
   </p>
 
   <p>
-    <strong>Logo:</strong>
+    <strong>Logo:</strong><br>
     <% if restaurant.logo.attached? %>
       <%= link_to image_tag(restaurant.logo.variant(:vectorized), width: 100, height: 100), restaurant.logo %>
     <% end %>
   </p>
 
   <p>
-    <strong>Hero:</strong>
+    <strong>Hero:</strong><br>
     <% if restaurant.hero.attached? %>
       <%= link_to image_tag(restaurant.hero.variant({ resize_to_limit: [400, 300], remove_bg: true })), restaurant.hero %>
+      <%= link_to image_tag(restaurant.hero.variant({ resize_to_limit: [420, 180], reframe: { aspect_ratio: "21:9", url: url_for(restaurant.hero) } })), restaurant.hero %>
     <% end %>
   </p>
 
